--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,11 @@
 [build]
   command = "npm run build"
   publish = "build"
+
+# API 프록시 설정 - CORS 문제 해결
+[[redirects]]
+  from = "/api/*"
+  to = "https://unitime-be.onrender.com/api/:splat"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
